--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -18,7 +18,7 @@
 							{% if false %}
 							<img class="media-object" src="{{resources}}/lorry/img/addon-60x80.png">
 							{% else %}
-							{% include "functions/addon.svg" %}
+							{% include "functions/svg/addon.twig" %}
 							{% endif %}
 						</div>
 						<div class="media-body">
