--- a/app/templates/publish/edit/basic.twig
+++ b/app/templates/publish/edit/basic.twig
@@ -80,7 +80,7 @@
 				<label for="type">{% trans "Game" %}</label>
 				<select name="game" class="form-control" id="type" required{% if submitted or approved %} disabled{% endif%}>
 					{% for short, currentgame in games %}
-						<option value="{{short}}"{% if short == addongame %} selected{% endif %}>{{currentgame.title}}</option>
+						<option value="{{short}}"{% if short == game.short %} selected{% endif %}>{{currentgame.title}}</option>
 					{% endfor %}
 				</select>
 			</div>
