rename create to developers in navbar

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -103,11 +103,6 @@ footer span, footer span a {
 	display: inline;
 }
 
-#site-notice {
-	padding: 15px;
-	margin-bottom: 0px;
-}
-
 .jumbotron {
 	padding: 30px 0 50px 0;
 }
@@ -120,6 +115,15 @@ footer span, footer span a {
 #identify.jumbotron {
 	margin-top: 40px;
 	padding: 25px 0 50px 0;
+}
+
+.site-notice.jumbotron {
+	padding: 15px 0;
+	margin-bottom: 0px;
+}
+
+.page-header {
+	margin-top: 15px;
 }
 
 .head img {
@@ -179,6 +183,11 @@ textarea {
 
 .media-addon {
 	text-overflow: ellipsis;
+	clear: left;
+
+	a, a:hover, a:active {
+		text-decoration: none;
+	}
 }
 
 .media-heading a:first-child {
@@ -246,6 +255,10 @@ h5 {
 
 .badge-openclonk {
 	background-color: gray;
+}
+
+.label-half-success {
+	background-color: #88b688;
 }
 
 h1 a.btn {
