--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -3,7 +3,6 @@
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			{% if addons %}<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">{% endif %}			
 			<h1>{{title}}</h1>
 		</div>
 	</div>
@@ -15,7 +14,7 @@
 			<a href="{{filename}}?sort=rating{% if sort == 'rating' and not reverse %}&reverse=1{% endif %}">{% trans %}by rating{% endtrans %}</a>{% if sort == 'rating' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %}
 		{% endset %}
 		{% set createaddon %}
-			<a href="{{base}}/create?for={{short}}">{% trans %}create a new addon{% endtrans %}</a>
+			<a href="{{base}}/publish/create?for={{short}}">{% trans %}create a new addon{% endtrans %}</a>
 		{% endset %}
 		<!--<p class="sort-bar">{% trans %}Sort by {{columns}} or {{createaddon}} for this game.{% endtrans %}	</p>!-->
 		<ul class="media-list addons">
@@ -28,11 +27,11 @@
 	<div class="jumbotron">
 		<div class="container">
 			<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right jumbo-image hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">
-			<h1>{% trans %}No addons available{% endtrans %}</h1>
+			<h2>{% trans %}No addons available{% endtrans %}</h2>
 			<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
 			{% if user_login %}
 				<p>
-					<a href="{{base}}/create?for={{short}}" class="btn btn-primary btn-lg">{% trans %}New {{game}} addon{% endtrans %}</a>
+					<a href="{{base}}/publish/create?for={{short}}" class="btn btn-primary btn-lg">{% trans %}New {{game}} addon{% endtrans %}</a>
 				</p>
 			{% endif %}
 		</div>
