--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -19,7 +19,7 @@
 			<ul class="nav navbar-nav">
 				<li{% if path.0 == "addons" and path.1 == "rage" %} class="active"{% endif %}><a href="{{base}}/addons/rage">{% trans %}Clonk Rage{% endtrans %}</a></li>
 				<li{% if path.0 == "addons" and path.1 == "openclonk"  %} class="active"{% endif %}><a href="{{base}}/addons/openclonk">{% trans %}OpenClonk{% endtrans %}</a></li>
-				<li{% if path.0 == "create" %} class="active"{% endif %}><a href="{{base}}/create">{% trans 'Publish' %}</a></li>
+				<li{% if path.0 == "developers" %} class="active"{% endif %}><a href="{{base}}/developers">{% trans 'Developers' %}</a></li>
 				{% if user_moderator %}<li{% if path.0 == "moderate" %} class="active"{% endif %}><a href="{{base}}/moderate">{% trans 'Moderation' %}</a></li>{% endif %}
 				{% if user_administrator %}<li{% if path.0 == "admin" %} class="active"{% endif %}><a href="{{base}}/admin">{% trans 'Administration' %}</a></li>{% endif %}
 			</ul>
