--- a/app/templates/publish/greeter.twig
+++ b/app/templates/publish/greeter.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
-{% set title = 'Publish'|trans %}
+{% set title = 'Developers'|trans %}
 
 {% block content %}
 	<div class="page-header">
@@ -10,8 +10,8 @@
 	</div>
 	<div class="jumbotron">
 		<div class="container">
-			<h2>{% trans %}Would you like to show the world what you built?{% endtrans %}</h2>
-			<p>{% trans %}Great! After registering you can create your addons here and publish them on Lorry.{% endtrans %}</p>
+			<h2>{% trans %}Would you like to show the world what you've built?{% endtrans %}</h2>
+			<p>{% trans %}Great! After registering you can publish your addons on Lorry.{% endtrans %}</p>
 			<p>
 				<a href="{{base}}/register?returnto={{origpath}}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
 				<a href="{{base}}/login?returnto={{origpath}}" class="btn btn-lg btn-primary">{% trans %}Login{% endtrans %}</a>
