update greeter string

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -35,7 +35,7 @@
 				<div class="jumbotron site-notice" id="greeter">
 					<div class="container">
 						<p style="margin: 0 0; font-size: 1.2em;">
-							{% trans %}Welcome to Clonk!{% endtrans %} {% trans %}Clonk is a unique game series about .{% endtrans %}
+							{% trans %}Welcome to Clonk!{% endtrans %} {% trans %}Clonk is a unique game series with thousands of player-created worlds.{% endtrans %}
 							<a href="{{base}}/clonk" class="btn btn-success btn">{% trans %}Learn more{% endtrans %}</a>
 							<a href="{{base}}/clonk?returnto={{origpath}}" class="btn btn-default btn" id="greeter-hide">{% trans %}Hide{% endtrans %}</a>
 						</p>
