add create addon button to my addons page

--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -10,6 +10,7 @@
 	</div>
 	{% if addons %}	
 		<div class="container">
+			<p><a href="{{base}}/publish/create" class="btn btn btn-success">{% trans %}Create new addon{% endtrans %}</a></p>
 			{% include 'functions/alert.twig' with {'selector' : 'addons'} %}
 			<ul class="media-list addons-small">
 				{% for addon in addons %}
@@ -36,9 +37,9 @@
 	{% else %}
 		<div class="jumbotron">
 			<div class="container">
-				<h2>{% trans %}Welcome to the publishing portal!{% endtrans %}</h2>
-				<p>{% trans %}Here you can publish your addons and make them available to your fans. Click the button below to get started.{% endtrans %}</p>
-				<p><a href="{{base}}/create" class="btn btn-lg btn-success">{% trans %}Create a new addon{% endtrans %}</a></p>
+				<h2>{% trans %}This will be your addon list{% endtrans %}</h2>
+				<p>{% trans %}.{% endtrans %}</p>
+				<p><a href="{{base}}/publish/create" class="btn btn-lg btn-success">{% trans %}Create a new addon{% endtrans %}</a></p>
 			</div>
 		</div>
 	{% endif %}
