update about page

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -73,24 +73,28 @@
 					<dd>with <a href="http://www.clonk.de/forum/en/topic_show.pl?pid=11760#pid11760">friendly permission</a> from <a href="http://www.clonk.de/redwolf.php?lng={% trans "en" %}">RedWolfDesign</a>,</dd>
 					<dt><a href="http://git.openclonk.org/openclonk-resources.git/blob/HEAD:/graphics/OpenClonkLogo.xcf">OpenClonk logo</a></dt>
 					<dd>by "<a href="http://forum.openclonk.org/user_info.pl?uid=37">MrBeast</a>" at <a href="http://openclonk.org/">openclonk.org</a>,</dd>
-					<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background image)</span></dt>
+					<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background texture)</span></dt>
 					<dd>by <a href="http://lukemcdonald.com/">Luke McDonald</a> via <a href="http://subtlepatterns.com/">Subtle Patterns</a>.</dd>
 				</dl>
 			</div>
 			<div class="col-md-4">
 				<hr class="visible-xs">
-				<h3 id="people">{% trans "People" %}</h3>
-				<dl>
-					<dt><a href="http://clonkspot.org/">{% trans %}Clonkspot community{% endtrans %}</a></dt>
-					<dd>{% trans %}feedback and thoughts{% endtrans %},</dd>
-					<dt><a href="http://forum.openclonk.org/">{% trans %}OpenClonk community{% endtrans %}</a></dt>
-					<dd>{% trans %}ideas and inspiration{% endtrans %},</dd>
-					<br>
+				<h3 id="development">{% trans "Development" %}</h3>
+				<dl style="margin-bottom: 40px;">
 					<div class="head">
 						<dt><img src="{{resources}}/lorry/img/benedict.png" class="img-circle">
 						<a href="https://beheh.de">Benedict Etzel</a> <span class="text-muted">/ <a href="{{base}}/users/B_E" class="text-muted">B_E</a></span></dt>
-						<dd>{% trans %}concept & development{% endtrans %}.</dd>
+						<dd>Lorry concept &amp; code.</dd>
 					</div>
+				</dl>
+				<h3 id="credits">{% trans "Credits" %}</h3>
+				<dl>
+					<dt><span class="text-muted">thanking the</span> <a href="http://clonkspot.org/">Clonkspot community</a>
+					<dd>for feedback and thoughts,</dd>
+					<dt><span class="text-muted">thanking the</span> <a href="http://forum.openclonk.org/">OpenClonk community</a></dt>
+					<dd>for inspiration and for creating OpenClonk,</dd>
+					<dt><span class="text-muted">thanking</span> Matthes Bender</dt>
+					<dd>for creating Clonk.</dd>
 				</dl>
 			</div>
 		</div>
