update developers page

--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -37,8 +37,8 @@
 	{% else %}
 		<div class="jumbotron">
 			<div class="container">
-				<h2>{% trans %}This will be your addon list{% endtrans %}</h2>
-				<p>{% trans %}.{% endtrans %}</p>
+				<h2>{% trans %}Your addons will appear here{% endtrans %}</h2>
+				<p>{% trans %}Let's get started!{% endtrans %}</p>
 				<p><a href="{{base}}/publish/create" class="btn btn-lg btn-success">{% trans %}Create a new addon{% endtrans %}</a></p>
 			</div>
 		</div>
