improve OAuth and OpenID flow

--- a/app/templates/functions/oauth.twig
+++ b/app/templates/functions/oauth.twig
@@ -14,7 +14,7 @@
 		<noscript><p class="help-block"><strong>{% trans %}or{% endtrans %}</strong></p></noscript>
 		<div class="form-group">
 			<label for="openid-provider" class="sr-only">{% trans %}OpenID url{% endtrans %}</label>
-			<input type="url" class="form-control" name="openid-identity" id="openid-provider" placeholder="{% trans %}OpenID url{% endtrans %}" required>
+			<input type="url" class="form-control" name="openid-identity" id="openid-provider" placeholder="{% trans %}OpenID url{% endtrans %}" value="http://" required>
 		</div>
 		<button type="submit" class="btn btn-default">{% trans %}Login with OpenID{% endtrans %}</button>
 	</form>
