--- a/app/templates/manage/administrator/portal.twig
+++ b/app/templates/manage/administrator/portal.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
-{% set title = 'Administration'|trans %}
+{% set title = 'Administrator'|trans %}
 
 {% block content %}
 	<div class="page-header">
