--- a/app/templates/site/developers.twig
+++ b/app/templates/site/developers.twig
@@ -28,6 +28,9 @@
 				<div class="col-md-7">
 					<h2>{% trans %}You have an awesome idea?{% endtrans %}</h2>
 					<p class="lead">{% trans %}Whether it's magic caves or exploding Wipfs, {{brand}} is the place to publish all your addons.{% endtrans %}</p>
+					<h2>Build with {{brand}}</h2>
+					<p>Would you integrate {{brand}} into your project?</p>
+					<p><a href="{{base}}/api" class="btn btn-default">{% trans %}API reference{% endtrans %}</a></p>
 				</div>
 			</div>
 		</div>
