update various urls

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -36,8 +36,8 @@
 					<div class="container">
 						<p style="margin: 0 0; font-size: 1.2em;">
 							{% trans %}Lorry is a fan site for Clonk.{% endtrans %} {% trans %}Clonk is a unique game series with thousands of player-created worlds.{% endtrans %}
-							<a href="{{base}}/clonk" class="btn btn-success btn">{% trans %}Learn more{% endtrans %}</a>
-							<a href="{{base}}/clonk?returnto={{origpath}}" class="btn btn-default btn" id="greeter-hide">{% trans %}Hide{% endtrans %}</a>
+							<a href="{{base}}/about/clonk" class="btn btn-success btn">{% trans %}Learn more{% endtrans %}</a>
+							<a href="{{base}}/about/clonk?returnto={{origpath}}" rel="nofollow" class="btn btn-default btn" id="greeter-hide">{% trans %}Hide{% endtrans %}</a>
 						</p>
 					</div>
 				</div>
