--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -58,7 +58,7 @@
 			<p class="lead">{% trans %}Lorry is the place for the best addons for the game series Clonk.{% endtrans %}</p>
 			<p>
 				<a href="{{base}}/register" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
-				<a href="{{base}}/clonk" class="btn btn-lg btn-default">{% trans %}New to Clonk?{% endtrans %}</a>
+				<a href="{{base}}/about/clonk" class="btn btn-lg btn-default">{% trans %}New to Clonk?{% endtrans %}</a>
 			</p>
 		{% endif %}
 			<hr>
