--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -16,14 +16,14 @@
 				<h3 id="fanpage">{% trans %}Fan page{% endtrans %}</h3>
 				<p>{% trans %}We're here as the fans of Clonk. We built this site as members of the community for "our" game.{% endtrans %}</p>
 				<p>{% trans %}This site is for new players to learn all about Clonk, to discover the huge database of addons and to help them get right into the game.{% endtrans %}</p>
-				<p><a href="{{base}}/clonk" class="btn btn-info">{% trans "Learn about Clonk" %}</a></p>
+				<p><a href="{{base}}/about/clonk" class="btn btn-info">{% trans "Learn about Clonk" %}</a></p>
 			</div>
 			<div class="col-md-4">
 				<hr class="visible-xs">
 				<h3 id="distributionplatform">{% trans %}Distribution platform{% endtrans %}</h3>
 				<p>{% trans %}We want to provide Clonk players with a simple, clean interface to find and download the best addons and keep them up-to-date as they progress.{% endtrans %}</p>
 				<p>{% trans %}It should also serve as an archive, to enable players to go back and find forgotten gems of the past.{% endtrans %}</p>
-				<p><a href="{{base}}/addons" class="btn btn-info">{% trans "Discover the addons" %}</a></p>
+				<p><a href="{{base}}/addons" class="btn btn-info">{% trans "Discover the addons" %}</a> <a href="{{base}}/about/api" class="btn btn-default">{% trans "API reference" %}</a></p>
 			</div>
 			<div class="col-md-4">
 				<hr class="visible-xs">
