--- a/app/templates/site/api.twig
+++ b/app/templates/site/api.twig
@@ -1,23 +1,23 @@
 {% extends 'root.twig' %}
 
-{% set title = 'Lorry API'|trans %}
+{% set title %}{% trans %}{{brand}} API reference{% endtrans %}{% endset %}
 
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			<h1>{{title}}</h1>
-			<p class="lead">{% trans %}Lorry offers a JSON based REST API for you to request data about addons and releases.{% endtrans %}</p>
+			<h1>{% trans %}API reference{% endtrans %}</h1>
 		</div>
 	</div>
 	<div class="container">
+		<h2>{% trans %}Introduction{% endtrans %}</h2>
+		<p>{% trans %}{{brand}} offers a read-only REST API for data about addons and releases.{% endtrans %}</p>
 		<div class="alert alert-warning">{% trans %}<strong>Please note:</strong> The lorry api is not yet final and can change at any time.{% endtrans %}</div>
 		<h2>{% trans %}Endpoints{% endtrans %}</h2>
-		<p>{% trans %}Most endpoints correspond to the web interface and can therefore be reached by simply appending <code>.json</code> to the url.{% endtrans %}</p>
 		<table class="table">
 			<tr><th>{% trans %}Url{% endtrans %}</th><th>{% trans %}Description{% endtrans %}</th><th>{% trans %}Typical result{% endtrans %}</th></tr>
-			<tr><td><pre>/games.json</pre></td><td>{% trans %}Returns a list of games.{% endtrans %}</td><td><pre>{"games":[{"id":"rage", ...}, ...]}</pre></td></tr>
-			<tr><td><pre>/addons/&lt;game&gt;.json</pre></td><td>{% trans %}Returns a list of addons for the queried game.{% endtrans %}</td><td><pre>{"addons":[{"id":"knights", ...}, ...]}</pre></td></tr>
-			<tr><td><pre>/addons/&lt;game&gt/&lt;addon&gt.json</pre></td><td>{% trans %}Returns details about the queried addon.{% endtrans %}</td><td><pre>{"addon":{"id":"knights", ...}}</pre></td></tr>
+			<tr><td><pre>/api/games.json</pre></td><td>{% trans %}Returns a list of games.{% endtrans %}</td><td><pre>{"games":[{"id":"rage", ...}, ...]}</pre></td></tr>
+			<tr><td><pre>/api/addons/&lt;game&gt;.json</pre></td><td>{% trans %}Returns a list of addons for the queried game.{% endtrans %}</td><td><pre>{"addons":[{"id":"knights", ...}, ...]}</pre></td></tr>
+			<tr><td><pre>/api/addons/&lt;game&gt/&lt;addon&gt.json</pre></td><td>{% trans %}Returns details about the queried addon.{% endtrans %}</td><td><pre>{"addon":{"id":"knights", ...}}</pre></td></tr>
 		</table>
 		<h2>{% trans %}Objects{% endtrans %}</h2>
 		<table class="table">
