--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -58,10 +58,11 @@
 				{% if connect %}
 				{% else %}
 				<h2>{% trans %}Welcome back!{% endtrans %}</h2>
-				<p class="lead">{% trans %}It's great to see you again.{% endtrans %}</p>
+				<p class="lead">{% trans %}{{brand}} is still being developed.{% endtrans %}</p>
+				<p><a href="{{base}}/contact" class="btn btn-lg btn-default">{% trans %}Feedback{% endtrans %}</a></p>
 				<hr>
 				<h3>{% trans %}Not registered yet?{% endtrans %}</h3>
-				<p>{% trans %}Registering takes only a few moments and allows you to participate in the Clonk community.{% endtrans %}</p>
+				<p class="lead">{% trans %}Registering takes only a few moments and lets you to take part in the Clonk community.{% endtrans %}</p>
 				<p><a href="{{base}}/register{% if returnto %}?returnto={{returnto}}{% endif %}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a></p>
 				{% endif %}
 			</div>
