--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -1,76 +1,84 @@
 {% extends 'root.twig' %}
 
 {% block content %}
-<div class="container" id="front">
-	<div class="row">
-		<div class="col-md-8">
-			<div id="featured-front" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#featured-front" data-slide-to="0" class="active"></li>
-					<li data-target="#featured-front" data-slide-to="1"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="item active">
-						<a href="{{base}}/about">
-							<img src="{{resources}}/lorry/img/banner.png" alt="Lorry">
-						</a>
-						<div class="carousel-caption">
-							<h3><strong>{% trans %}This is Lorry{% endtrans %}</strong><br>{% trans %}Welcome back to Clonk{% endtrans %}</h3>
+	<div class="container" id="front">
+		<div class="row">
+			<div class="col-md-8">
+				<div id="featured-front" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#featured-front" data-slide-to="0" class="active"></li>
+						<li data-target="#featured-front" data-slide-to="1"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="item active">
+							<a href="{{base}}/about">
+								<img src="{{resources}}/lorry/img/banner.png" alt="Lorry">
+							</a>
+							<div class="carousel-caption">
+								<h3><strong>{% trans %}This is Lorry{% endtrans %}</strong><br>{% trans %}Welcome back to Clonk{% endtrans %}</h3>
+							</div>
+						</div>
+						<div class="item">
+							<a href="{{base}}/addons/rage/moderncombat">
+								<img src="http://placehold.it/900x500/77/00&text=CMC" alt="Codename: Modern Combat">
+							</a>
+							<div class="carousel-caption">
+								<h3><strong>Codename: Modern Combat R1.6</strong><br>{% trans %}Now available{% endtrans %}</h3>
+							</div>
 						</div>
 					</div>
-					<div class="item">
-						<a href="{{base}}/addons/rage/moderncombat">
-							<img src="http://placehold.it/900x500/77/00&text=CMC" alt="Codename: Modern Combat">
-						</a>
-						<div class="carousel-caption">
-							<h3><strong>Codename: Modern Combat R1.6</strong><br>{% trans %}Now available{% endtrans %}</h3>
-						</div>
-					</div>
+					<a class="left carousel-control" href="#featured-front" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+					</a>
+					<a class="right carousel-control" href="#featured-front" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right"></span>
+					</a>
 				</div>
-				<a class="left carousel-control" href="#featured-front" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left"></span>
-				</a>
-				<a class="right carousel-control" href="#featured-front" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right"></span>
-				</a>
+				<h3>{% trans %}Latest releases{% endtrans %}</h3>
+				{% if new_addons %}
+					<ul class="media-list addons-small">
+						{% for addon in new_addons %}
+							{% include "functions/addon.twig" %}
+						{% endfor %}
+					</ul>
+				{% else %}
+					<p class="alert alert-warning">{% trans %}There are no new releases.{% endtrans %}</p>
+				{% endif %}
+				<hr class="visible-xs">
 			</div>
-			<h3>{% trans %}Latest releases{% endtrans %}</h3>
-		{% if new_addons %}
-			<ul class="media-list addons-small">
-			{% for addon in new_addons %}
-				{% include "functions/addon.twig" %}
-			{% endfor %}
-			</ul>
-		{% else %}
-			<p class="alert alert-warning">{% trans %}There are no new releases.{% endtrans %}</p>
-		{% endif %}
-			<hr class="visible-xs">
-		</div>
-		<div class="col-md-4 sidebar">
-		{% if user_login %}
-			<h1>{% trans %}Welcome back.{% endtrans %}</h1>
-			<p class="lead">{% trans %}{{brand}} lives from community creations. Why not start developing a new addon today?{% endtrans %}</p>
-			<p>
-				<a href="{{base}}/developers" class="btn btn-lg btn-primary">{% trans %}Developer portal{% endtrans %}</a>
-				<a href="{{base}}/publish/create" class="btn btn-lg btn-success">{% trans %}New addon{% endtrans %}</a>
-			</p>
-		{% else %}
-			<h1><span class="visible-lg">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="hidden-lg">{% trans %}Welcome{% endtrans %}</span></h1>
-			<p class="lead">{% trans %}{{brand}} is the site for the best addons for the game series Clonk.{% endtrans %}</p>
-			<p>
-				<a href="{{base}}/about/clonk" class="btn btn-lg btn-primary">{% trans %}New to Clonk?{% endtrans %}</a>
-				<a href="{{base}}/register" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
-			</p>
-		{% endif %}
-			<hr>
-			<h3>{% trans %}New: Multiple languages{% endtrans %}</h3>
-			<p>{% trans %}{{brand}} is now available in German and English. You can add titles and descriptions in these languages for all your addons and releases.{% endtrans %}</p>
-			<p><a href="https://clonkspot.org/forum/topic_show.pl?tid=30" class="btn btn-default">{% trans %}Announcements{% endtrans %}</a></p>
-			<hr>
-			<h3>{% trans %}In development{% endtrans %}</h3>
-			<p>{% trans %}The platform behind {{brand}} is still in development. You can join and try out what works so far, and we will continue to add many features.{% endtrans %}</p>
-			<p><a href="{{base}}/about" class="btn btn-default">{% trans %}About the project{% endtrans %}</a></p>
+			<div class="col-md-4 sidebar">
+				{% if user_login %}
+					{% if new_user %}
+						<h1>{% trans %}Hey {{user_name}}!{% endtrans %}</h1>
+						<p class="lead">{% trans %}Welcome to {{brand}}. On this site you can find addons by other players and publish your own. Here are some links to get you started:{% endtrans %}</p>
+						<p>
+							<a href="{{base}}/addons" class="btn btn-lg btn-primary">{% trans %}For players{% endtrans %}</a>
+							<a href="{{base}}/developers" class="btn btn-lg btn-info">{% trans %}For developers{% endtrans %}</a>
+						</p>
+					{% else %}
+						<h1>{% trans %}Welcome back.{% endtrans %}</h1>
+						<p class="lead">{% trans %}{{brand}} lives from community creations. Why not start developing a new addon today?{% endtrans %}</p>
+						<p>
+							<a href="{{base}}/developers" class="btn btn-lg btn-info">{% trans %}Developer portal{% endtrans %}</a>
+						</p>
+					{% endif %}
+				{% else %}
+					<h1><span class="visible-lg">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="hidden-lg">{% trans %}Welcome{% endtrans %}</span></h1>
+					<p class="lead">{% trans %}{{brand}} is the site for the best addons for the game series Clonk.{% endtrans %}</p>
+					<p>
+						<a href="{{base}}/about/clonk" class="btn btn-lg btn-info">{% trans %}New to Clonk?{% endtrans %}</a>
+						<a href="{{base}}/register" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
+					</p>
+				{% endif %}
+				<hr>
+				<h3>{% trans %}New: Multiple languages{% endtrans %}</h3>
+				<p>{% trans %}{{brand}} is now available in German and English. You can add titles and descriptions in these languages for all your addons and releases.{% endtrans %}</p>
+				<p><a href="https://clonkspot.org/forum/topic_show.pl?tid=30" class="btn btn-default">{% trans %}Announcements{% endtrans %}</a></p>
+				<hr>
+				<h3>{% trans %}In development{% endtrans %}</h3>
+				<p>{% trans %}The platform behind {{brand}} is still in development. You can join and try out what works so far, and we will continue to add many features.{% endtrans %}</p>
+				<p><a href="{{base}}/about" class="btn btn-default">{% trans %}About the project{% endtrans %}</a></p>
+			</div>
 		</div>
 	</div>
-</div>
 {% endblock %}
