move inline greeter css to stylesheet

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -122,6 +122,11 @@ footer span, footer span a {
 	margin-bottom: 0px;
 }
 
+.site-notice p {
+	margin: 0 0;
+	font-size: 1.2em;
+}
+
 .page-header {
 	margin-top: 15px;
 }
