--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -95,6 +95,10 @@ footer span a {
   padding: 15px 0;
   margin-bottom: 0px;
 }
+.site-notice p {
+  margin: 0 0;
+  font-size: 1.2em;
+}
 .page-header {
   margin-top: 15px;
 }
